--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     </div>
 
     <footer class="footer">
-      
+      <div class="container">
+        <div class="footer-section">
+          <h2>Fale Conosco</h2>
+          <p>contato@clinica.com</p>
+          <p>Telefone: (XX) XXXX-XXXX</p>
+        </div>
+
+        <div class="footer-section">
+          <h2>Links Úteis</h2>
+          <ul>
+            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="#">Termos de Serviço</a></li>
+            <li><a href="#">FAQ</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
