🎾💴 Checkpoint ./index.html:58517880/388

--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
         <div class="footer-section">
           <h2>Fale Conosco</h2>
           <p>contato@clinica.com</p>
-          <p>Telefone: (XX) XXXX-XXXX</p>
+          <p>(84) XXXX-XXXX</p>
         </div>
 
         <div class="footer-section">
           <h2>Links Úteis</h2>
           <ul>
-            <li><a href="#">Política de Privacidade</a></li>
-            <li><a href="#">Termos de Serviço</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Nossa Historia</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Profissionais de saúde</a></li>
+            <li><a href="#">Medicina do Trabalho</a></li>
+            <li><a href="#">Avaliação</a></li>
+            <li><a href="#">Trabalhe Conosco</a></li>
+            <li><a href="#">Dashboard</a></li>
+            
           </ul>
         </div>
       </div>
