🍦🐓 Checkpoint ./cadastro.html:58483456/666 ./index.html:58483456/4554 ./login.html:58483456/1154 ./style.css:58483456/580

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <ul>
-        <!-- Seu menu de navegação aqui -->
-      </ul>
+      <ul class="logo-text">
+          Clínica
+        </ul>
     </nav>
     <div class="nomes-links">
       <a href="#">Nossa clinica</a>
       <a href="#">Especialidades</a>
       <a href="#">Serviços</a>
       <a href="#">Contato</a>
+      <a href="login.html">Login/Cadastro</a>
     </div>
 
     <footer class="footer">
