💧😻 Checkpoint ./style.css:58483456/69 ./login.html:58483456/1568 ./cadastro.html:58483456/760 ./index.html:58483456/23

--- a/cadastro.html
+++ b/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Clínica</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -14,7 +14,7 @@
       </ul>
     </nav>
     <div class="nomes-links">
-      <a href="#">Nossa clinica</a>
+      <a href="index.html">Clínica</a>
       <a href="#">Especialidades</a>
       <a href="#">Serviços</a>
       <a href="#">Contato</a>
@@ -23,7 +23,26 @@
   </header>
   
       <footer class="footer">
-        
+        <div class="container">
+        <div class="footer-section">
+          <h2>Fale Conosco</h2>
+          <p>contato@clinica.com</p>
+          <p>(84) XXXX-XXXX</p>
+        </div>
+
+        <div class="footer-section">
+          <h2>Links Úteis</h2>
+          <ul>
+            <li><a href="#">Nossa Historia</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Profissionais de saúde</a></li>
+            <li><a href="#">Medicina do Trabalho</a></li>
+            <li><a href="#">Avaliação</a></li>
+            <li><a href="#">Trabalhe Conosco</a></li>
+            <li><a href="#">Dashboard</a></li>
+          </ul>
+        </div>
+      </div>
       </footer>
 </body>
 </html>
