--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <div class="nomes-links">
-      <a href="#">Nossa clinica</a>
+      <a href="index.html">Clínica</a>
       <a href="#">Especialidades</a>
       <a href="#">Serviços</a>
       <a href="#">Contato</a>
