--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínica - Login</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -14,7 +14,7 @@
       </ul>
     </nav>
     <div class="nomes-links">
-      <a href="#">Nossa clinica</a>
+      <a href="index.html">Clínica</a>
       <a href="#">Especialidades</a>
       <a href="#">Serviços</a>
       <a href="#">Contato</a>
@@ -38,7 +38,12 @@
         <input type="text" name="senha" id="senha">
       </div>
   </form>
-
+  
+  <div class="cadastro">
+    <br>
+    <a href="cadastro.html">Não possui uma conta? Cadastre-se clicando aqui.</a>
+  </div>
+  
   <footer class="footer">
         
   </footer>
