🎻🚪 Checkpoint ./style.css:58483456/60 ./login.html:58483456/919 ./index.html:58483456/273 ./cadastro.html:58483456/148

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--navbar-->
   <header>
     <nav class="nav-bar">
       <ul class="logo-text">
@@ -21,28 +22,29 @@
       <a href="login.html">Login/Cadastro</a>
     </div>
   </header>
-  
-      <footer class="footer">
-        <div class="container">
-        <div class="footer-section">
-          <h2>Fale Conosco</h2>
-          <p>contato@clinica.com</p>
-          <p>(84) XXXX-XXXX</p>
-        </div>
-
-        <div class="footer-section">
-          <h2>Links Úteis</h2>
-          <ul>
-            <li><a href="#">Nossa Historia</a></li>
-            <li><a href="#">Especialidades</a></li>
-            <li><a href="#">Profissionais de saúde</a></li>
-            <li><a href="#">Medicina do Trabalho</a></li>
-            <li><a href="#">Avaliação</a></li>
-            <li><a href="#">Trabalhe Conosco</a></li>
-            <li><a href="#">Dashboard</a></li>
-          </ul>
-        </div>
+    
+<!--footer-->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-section">
+        <h2>Fale Conosco</h2>
+        <p>contato@clinica.com</p>
+        <p>(84) XXXX-XXXX</p>
       </div>
-      </footer>
+
+      <div class="footer-section">
+        <h2>Links Úteis</h2>
+        <ul>
+          <li><a href="#">Nossa Historia</a></li>
+          <li><a href="#">Especialidades</a></li>
+          <li><a href="#">Profissionais de saúde</a></li>
+          <li><a href="#">Medicina do Trabalho</a></li>
+          <li><a href="#">Avaliação</a></li>
+          <li><a href="#">Trabalhe Conosco</a></li>
+          <li><a href="#">Dashboard</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
