--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    <nav class="nav-bar">
-      <ul class="logo-text">
-          Clínica
-        </ul>
-    </nav>
-    <div class="nomes-links">
-      <a href="index.html">Clínica</a>
-      <a href="#">Especialidades</a>
-      <a href="#">Serviços</a>
-      <a href="#">Contato</a>
-      <a href="login.html">Login/Cadastro</a>
-    </div>
-
+<!--navbar-->
+    <header>
+      <nav class="nav-bar">
+        <ul class="logo-text">
+            Clínica
+          </ul>
+      </nav>
+      <div class="nomes-links">
+        <a href="index.html">Clínica</a>
+        <a href="#">Especialidades</a>
+        <a href="#">Serviços</a>
+        <a href="#">Contato</a>
+        <a href="login.html">Login/Cadastro</a>
+      </div>
+    </header>
+    
+<!--footer-->
     <footer class="footer">
       <div class="container">
         <div class="footer-section">
