--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!--navbar-->
   <header>
     <nav class="nav-bar">
       <ul class="logo-text"> <!-- será removido depois -->
@@ -22,28 +23,31 @@
     </div>
   </header>
   
-  <div>
-    <h1>Login</h1>
-    <p>Insira seus dados para acessar o conteúdo</p>
-    <br>
-  </div>
+<!--área de login-->
+  <div clas>
+    <div>
+      <h1>Login</h1>
+      <p>Insira seus dados para acessar o conteúdo</p>
+      <br>
+    </div>
 
-  <form>
-      <div>
-        <label>Identificador</label>
-        <input type="text" name="identificador" id="identificador"> 
-      </div>
-      <div>
-        <label>Senha</label>
-        <input type="text" name="senha" id="senha">
-      </div>
-  </form>
-  
-  <div class="cadastro">
+    <form>
+        <div>
+          <label>Identificador</label>
+          <input type="text" name="identificador" id="identificador"> 
+        </div>
+        <div>
+          <label>Senha</label>
+          <input type="text" name="senha" id="senha">
+        </div>
+    </form>
+  </div>  
+  <div class="link-cadastro">
     <br>
-    <a href="cadastro.html">Não possui uma conta? Cadastre-se clicando aqui.</a>
+    <p>Não possui uma conta? Cadastre-se<a href="cadastro.html"> clicando aqui.</a></p>
   </div>
   
+<!--footer-->
   <footer class="footer">
         
   </footer>
