--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!--navbar-->
-  <header>
+  <header class="header">
     <nav class="nav-bar">
       <ul class="logo-text"> <!-- será removido depois -->
         Clínica
@@ -29,17 +29,14 @@
     <div>
       <h1>Login</h1>
       <p>Insira seus dados para acessar o conteúdo</p>
-      <br>
     </div>
 
     <form>
         <div>
-          <label>Identificador</label>
-          <input type="text" name="identificador" id="identificador"> 
+          <input type="text" name="identificador" id="identificador" class="cada_login-input" placeholder="Identificador"> 
         </div>
         <div>
-          <label>Senha</label>
-          <input type="text" name="senha" id="senha">
+          <input type="password" name="senha" id="senha" class="cada_login-input" placeholder="Senha">
         </div>
     </form>
     
