🍜⏲ Checkpoint ./login.html:58483456/96 ./style.css:58483456/342 ./cadastro.html:58517880/4122 ./index.html:58517880/2085

--- a/login.html
+++ b/login.html
@@ -38,10 +38,10 @@
         <div>
           <input type="password" name="senha" id="senha" class="cada_login-input" placeholder="Senha">
         </div>
+      <button class="enviar-button">Login</button>
     </form>
     
     <div class="link-cadastro">
-    <br>
     <p>Não possui uma conta? Cadastre-se<a href="cadastro.html"> clicando aqui.</a></p>
   </div>
     
