💡👨‍❤️‍👨 Checkpoint ./index.html:58517880/310 ./.glitch-assets:58517880/399 ./style.css:58517880/62

--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
       p
       p
     </h1>
+    <h2>
+      p
+      p
+      p
+      p
+      p
+      p
+    </h2>
+    <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/jujutsuk.jpg.webp?v=1696379011195" alt="imagem01">
 
+    <p>
+      ppkkkkk
+      p
+      p
+      p
+      a
+      a
+      a
+      a
+      a
+      a
+    </p>
     <!--footer-->
     <footer class="footer">
       <div class="container">
