😽❣️ Checkpoint ./style.css:58483456/238:58517880/97 ./index.html:58517880/383 ./cadastro.html:58517880/3061

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro - Clínica</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap">
-</head>
-<body>
-<!--navbar-->
-  <header>
-    <nav class="nav-bar">
-      <ul class="logo-text">
-        Clínica
-      </ul>
-    </nav>
-    <div class="nomes-links">
-      <a href="index.html">Clínica</a>
-      <a href="#">Especialidades</a>
-      <a href="#">Serviços</a>
-      <a href="#">Contato</a>
-      <a href="login.html">Login/Cadastro</a>
-    </div>
-  </header>
-    
-<!--footer-->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-section">
-        <h2>Fale Conosco</h2>
-        <p>contato@clinica.com</p>
-        <p>(84) XXXX-XXXX</p>
-      </div>
-
-      <div class="footer-section">
-        <h2>Links Úteis</h2>
-        <ul>
-          <li><a href="#">Nossa Historia</a></li>
-          <li><a href="#">Especialidades</a></li>
-          <li><a href="#">Profissionais de saúde</a></li>
-          <li><a href="#">Medicina do Trabalho</a></li>
-          <li><a href="#">Avaliação</a></li>
-          <li><a href="#">Trabalhe Conosco</a></li>
-          <li><a href="#">Dashboard</a></li>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
+    />
+  </head>
+  <body>
+    <!--navbar-->
+    <header>
+      <nav class="nav-bar">
+        <ul class="logo-text">
+          Clínica
         </ul>
+      </nav>
+      <div class="nomes-links">
+        <a href="index.html">Clínica</a>
+        <a href="#">Especialidades</a>
+        <a href="#">Serviços</a>
+        <a href="#">Contato</a>
+        <a href="login.html">Login/Cadastro</a>
       </div>
-    </div>
-  </footer>
-</body>
+    </header>
+    <div class="content"></div>
+
+    <!--footer-->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-section">
+          <h2>Fale Conosco</h2>
+          <p>contato@clinica.com</p>
+          <p>(84) XXXX-XXXX</p>
+        </div>
+
+        <div class="footer-section">
+          <h2>Links Úteis</h2>
+          <ul>
+            <li><a href="#">Nossa Historia</a></li>
+            <li><a href="#">Especialidades</a></li>
+            <li><a href="#">Profissionais de saúde</a></li>
+            <li><a href="#">Medicina do Trabalho</a></li>
+            <li><a href="#">Avaliação</a></li>
+            <li><a href="#">Trabalhe Conosco</a></li>
+            <li><a href="#">Dashboard</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
