😬🌋 Checkpoint ./login.html:58483456/176 ./style.css:58483456/46

--- a/login.html
+++ b/login.html
@@ -37,20 +37,10 @@
 
       <form>
         <div>
-          <input
-            type="text"
-            name="identificador"
-            class="login-input"
-            placeholder="Identificador"
-          />
+          <input type="text" name="identificador" id="identificador" class="login-input" placeholder="Identificador"/>
         </div>
         <div>
-          <input
-            type="password"
-            name="senha"
-            class="login-input"
-            placeholder="Senha"
-          />
+          <input type="password" name="senha" id="senha" class="login-input" placeholder="Senha"/>
         </div>
         <button class="enviar-button">Login</button>
       </form>
