👏👘 Checkpoint ./index.html:58517880/242 ./style.css:58517880/164 ./cadastro.html:58517880/34848 ./login.html:58517880/42705

--- a/login.html
+++ b/login.html
@@ -37,17 +37,31 @@
 
       <form>
         <div>
-          <input type="text" name="identificador" id="identificador" class="login-input" placeholder="Identificador"/>
+          <input
+            type="text"
+            name="identificador"
+            id="identificador"
+            class="login-input"
+            placeholder="Identificador"
+          />
         </div>
         <div>
-          <input type="password" name="senha" id="senha" class="login-input" placeholder="Senha"/>
+          <input
+            type="password"
+            name="senha"
+            id="senha"
+            class="login-input"
+            placeholder="Senha"
+          />
         </div>
         <button class="enviar-button">Login</button>
       </form>
 
       <div class="link-cadastro">
         <p>
-          Não possui uma conta? Cadastre-se<a href="cadastro.html"> clicando aqui.</a>
+          Não possui uma conta? Cadastre-se<a href="cadastro.html">
+            clicando aqui.</a
+          >
         </p>
       </div>
     </div>
@@ -62,7 +76,7 @@
             width="23"
             height="23"
             fill="currentColor"
-            class="bi bi-whatsapp"
+            class="bi bi-whatsapp icon-hover"
             viewbox="0 0 16 16"
           >
             <path
@@ -75,7 +89,7 @@
             width="8%"
             height="23"
             fill="currentColor"
-            class="bi bi-telephone-fill"
+            class="bi bi-telephone-fill icon-hover"
             viewbox="0 0 16 16"
           >
             <path
@@ -90,6 +104,7 @@
             width="23"
             height="23"
             viewbox="0 0 512 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -108,6 +123,7 @@
             width="20"
             height="23"
             viewbox="0 0 512 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -124,6 +140,7 @@
             width="8%"
             height="23"
             viewbox="0 0 448 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -140,6 +157,7 @@
             width="6%"
             height="23"
             viewbox="0 0 576 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -156,13 +174,116 @@
         <div class="footer-section">
           <h2>Links Úteis</h2>
           <ul>
-            <li><a href="#">Nossa Historia</a></li>
-            <li><a href="#">Especialidades</a></li>
-            <li><a href="#">Profissionais de saúde</a></li>
-            <li><a href="#">Medicina do Trabalho</a></li>
-            <li><a href="#">Avaliação</a></li>
-            <li><a href="#">Trabalhe Conosco</a></li>
-            <li><a href="#">Dashboard</a></li>
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Nossa Historia </span>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Especialidades </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Profisionais de saúde</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Medicina do trabalho </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Avalição </span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Trabalhe conosco</span>
+              </a>
+            </li>
+
+            <li>
+              <a href="#">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="icone"
+                  fill="currentColor"
+                  viewbox="0 0 16 16"
+                >
+                  <path
+                    d="M6 12.796V3.204L11.481 8 6 12.796zm.659.753 5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"
+                  />
+                </svg>
+                <span class="icone-nome">Dashboard</span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
