--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             width="23"
             height="23"
             fill="currentColor"
-            class="bi bi-whatsapp"
+            class="bi bi-whatsapp icon-hover"
             viewbox="0 0 16 16"
           >
             <path
@@ -48,7 +48,7 @@
             width="8%"
             height="23"
             fill="currentColor"
-            class="bi bi-telephone-fill"
+            class="bi bi-telephone-fill icon-hover"
             viewbox="0 0 16 16"
           >
             <path
@@ -63,6 +63,7 @@
             width="23"
             height="23"
             viewbox="0 0 512 512"
+            class="icon-hover"               
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -81,6 +82,8 @@
             width="20"
             height="23"
             viewbox="0 0 512 512"
+            class="icon-hover"
+            
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -97,6 +100,7 @@
             width="8%"
             height="23"
             viewbox="0 0 448 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
@@ -113,6 +117,7 @@
             width="6%"
             height="23"
             viewbox="0 0 576 512"
+            class="icon-hover"
           >
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <style>
