🏞🕹 Checkpoint ./cadastro.html:58483456/1257:58483462/2 ./index.html:58483462/442

--- a/cadastro.html
+++ b/cadastro.html
@@ -28,6 +28,27 @@
     </header>
     <div class="content"></div>
 
+        <!--área de cadastro-->
+    <div class="login-container">
+      <div>
+        <h1>Cadastre-se</h1>
+      </div>
+
+      <form>
+        <div>
+          <input type="text" name="identificador" id="identificador" class="login-input" placeholder="Identificador"/>
+        </div>
+        <div>
+          <input type="password" name="senha" id="senha" class="login-input" placeholder="Senha"/>
+        </div>
+        <button class="enviar-button">Enviar</button>
+      </form>
+
+      <div class="link-cadastro">
+        <p>Já possui uma conta? Faça o login <a href="login.html">clicando aqui.</a></p>
+      </div>
+    </div>
+    
     <!--footer-->
     <footer class="footer">
       <div class="container">
