🏪💂 Checkpoint ./Solicitar.html:58483462/23485 ./style.css:58483462/328 ./index.html:58517880/23256 ./cadastro.html:58483456/117

--- a/cadastro.html
+++ b/cadastro.html
@@ -32,6 +32,9 @@
     <div class="login-container">
       <div>
         <h1>Cadastre-se</h1>
+        <p>
+          Insira os dados solicitados para realizar o cadastro.
+        </p>
       </div>
 
       <form>
