👽🐵 Checkpoint ./cadastro.html:58483456/467 ./Solicitar.html:58483462/171

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -37,10 +37,13 @@
 
       <form>
         <section>
-          <input type="text" name="identificador">
+          <label>Nome: </label><input type="text" name="identificador">
         </section>
         <section>
-          <input type="text" name="identificador">
+          <label>Idade: </label><input type="text" name="identificador">
+        </section>
+                <section>
+          <label>Idade: </label><input type="text" name="identificador">
         </section>
         <button class="enviar-button">Enviar</button>
       </form>
