👞🚪 Checkpoint ./Solicitar.html:58483462/4734 ./style.css:58483456/46 ./cadastro.html:58483456/32

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,7 +28,7 @@
     </header>
     <div class="content"></div>
 
-        <!--área de cadastro-->
+    <!--área de cadastro-->
     <div class="solicitar-conteiner">
       <div>
         <h1>Solicitar atendimento</h1>
@@ -37,22 +36,35 @@
 
       <form>
         <section>
-          <label>Nome: </label><input type="text" name="identificador">
+          <label>Nome: </label><input type="text" name="identificador" />
         </section>
         <section>
-          <label>Idade: </label><input type="text" name="identificador">
+          <label>Data de nascimento: </label><input type="data" />
         </section>
-                <section>
-          <label>Idade: </label><input type="text" name="identificador">
+
+        <section>
+          <label>E-mail: </label><input type="text" name="identificador" />
+        </section>
+        <section>
+          <label>CPF ou RG: </label><input type="text" name="identificador" />
+        </section>
+        <section>
+          <label>Data da consulta: </label
+          ><input type="data" name="identificador" />
+        </section>
+        <section>
+          <label>Descrição do motivo da consulta ou sintomas: </label
+          ><input type="text" name="identificador" />
         </section>
         <button class="enviar-button">Enviar</button>
       </form>
 
       <div class="link-cadastro">
-        <p>Já possui uma conta? Faça o login <a href="login.html">clicando aqui.</a></p>
+        <p>
+          Já possui uma conta? Faça o login
+          <a href="login.html">clicando aqui.</a>
+        </p>
       </div>
     </div>
-    
-
   </body>
 </html>
