--- a/cadastro.html
+++ b/cadastro.html
@@ -45,7 +45,7 @@
           <input type="password" name="senha" id="digitar-senha" class="login-input" placeholder="Senha"/>
         </div>
         <div>
-          <input type="password" name="senha" id="confirmar-senha" class="login-input" placeholder="insira sua senha novamente"/>
+          <input type="password" name="senha" id="confirmar-senha" class="login-input" placeholder="Repita a senha"/>
         </div>
         <button id="cadastro-button" class="enviar-button">Cadastre-se</button>
       </form>
