✊✍️ Checkpoint ./style.css:58483462/333 ./.glitch-assets:58483462/382 ./Solicitar.html:58483462/203

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -33,7 +33,7 @@
       <div>
         <h1>Solicitar atendimento</h1>
       </div>
-
+      
       <form>
         <section>
           <label>Nome: </label><input type="text" name="identificador" />
@@ -59,6 +59,8 @@
         <button class="enviar-button">Enviar</button>
       </form>
       </div>
+    <div class="img-solicitar">
+      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/3255382.jpg?v=1697113694155">
     </div>
   </body>
 </html>
