📺🗽 Checkpoint ./style.css:58483462/258 ./Solicitar.html:58483462/4033

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -26,23 +26,18 @@
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
-    <div class="content"></div>
-    
-    <div class="img-solicitar">
-      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/3255382.jpg?v=1697113694155">
-    </div>
     <!--área de cadastro-->
     <div class="solicitar-conteiner">
       <div>
         <h1>Solicitar atendimento</h1>
       </div>
-      
+
       <form>
         <section>
           <label>Nome: </label><input type="text" name="identificador" />
         </section>
         <section>
-          <label>Data de nascimento: </label><input type="data" />
+          <label>Data de nascimento: </label><input type="datetime-local" />
         </section>
 
         <section>
@@ -53,7 +48,7 @@
         </section>
         <section>
           <label>Data da consulta: </label
-          ><input type="data" name="identificador" />
+          ><input type="datetime-local" name="identificador" />
         </section>
         <section>
           <label>Descrição do motivo da consulta ou sintomas: </label
@@ -61,6 +56,9 @@
         </section>
         <button class="enviar-button">Enviar</button>
       </form>
-      </div>
+    </div>
+    <section class="img-solicitar">
+      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/3255382.jpg?v=1697113694155">
+    </section>
   </body>
 </html>
