📮👽 Checkpoint ./.glitch-assets:58483462/800 ./index.html:58483462/405 ./style.css:58483462/216

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
         <a href="login.html">Login/Cadastro</a>
       </div>
     </header>
-    <div class="content"></div>
+    <!--<div class="content"></div>-->
+    
+    <conteiner class="imagem-inicial">
+      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/banner.png?v=1697132758947">
+    </conteiner>
+    
     <!--footer-->
     <footer class="footer">
       <div class="container">
