--- a/cadastro.html
+++ b/cadastro.html
@@ -39,7 +39,7 @@
 
       <form>
         <div>
-          <input type="text" name="email" id="email" class="login-input" placeholder="E-mail"/>
+          <input type="email" name="email" id="email" class="login-input" placeholder="E-mail"/>
         </div>
         <div>
           <input type="password" name="senha" id="digitar-senha" class="login-input" placeholder="Senha"/>
