--- a/cadastro.html
+++ b/cadastro.html
@@ -35,13 +35,17 @@
       </div>
 
       <form>
-       <label for="genero">Gênero:</label>
+       <label for="genero">Gênero</label>
         <select id="genero" name="genero">
             <option value="masculino">Masculino</option>
             <option value="feminino">Feminino</option>
             <option value="outro">Outro</option>
             <option value="naoinformado">Prefiro não informar</option>
         </select>
+        <div>
+          <label>Data de Nascimento</label>
+          <input type="date" id="dataNascimento" class="login-input" name="dataNascimento"/>
+        </div>
         <div>
           <input type="email" name="email" id="email" class="login-input" placeholder="E-mail"/>
         </div>
