--- a/cadastro.html
+++ b/cadastro.html
@@ -35,8 +35,15 @@
       </div>
 
       <form>
+        <div>
+          <input type="text" name="nome" class="login-input" id="nome-cadastro" placeholder="Nome" required>
+        </div>
+        <div>
+          <input type="text" name="sobrenome" class="login-input" id="sobrenome-cadastro" placeholder="Sobrenome" required>
+        </div>
+        
        <label for="genero">Gênero</label>
-        <select id="genero" name="genero">
+        <select id="genero" name="genero" required>
             <option value="masculino">Masculino</option>
             <option value="feminino">Feminino</option>
             <option value="outro">Outro</option>
@@ -44,13 +51,19 @@
         </select>
         <div>
           <label>Data de Nascimento</label>
-          <input type="date" id="dataNascimento" class="login-input" name="dataNascimento"/>
+          <input type="date" id="dataNascimento" class="login-input" name="dataNascimento" required/>
         </div>
         <div>
-          <input type="email" name="email" id="email" class="login-input" placeholder="E-mail"/>
+          <div>
+          <input type="tel" pattern="[0-9] {2} - [0-9] {4} - [0-9] - {4}" name="telefone" class="login-input" id="telefone-cadastro" required>
+          </div>
+          <input type="email" name="email" id="email" class="login-input" placeholder="E-mail" required/>
         </div>
         <div>
           <input type="password" name="senha" id="digitar-senha" class="login-input" placeholder="Senha"/>
+        </div>
+        <div>
+          <input type="password" name="confirmarSenha" id="confirmar-senha" class="login-input" placeholder="Confirmar"/>
         </div>
         <button id="cadastro-button" class="enviar-button">Cadastre-se</button>
       </form>
