--- a/cadastro.html
+++ b/cadastro.html
@@ -55,15 +55,15 @@
         </div>
         <div>
           <div>
-          <input type="tel" pattern="[0-9] {2} - [0-9] {4} - [0-9] - {4}" name="telefone" class="login-input" id="telefone-cadastro" required>
+          <input type="tel" pattern="/d*" name="telefone" class="login-input" id="telefone-cadastro" title="Por favor, insira apenas números" placeholder="Telefone" required>
           </div>
           <input type="email" name="email" id="email" class="login-input" placeholder="E-mail" required/>
         </div>
         <div>
-          <input type="password" name="senha" id="digitar-senha" class="login-input" placeholder="Senha"/>
+          <input type="password" name="senha" id="digitar-senha" class="login-input" placeholder="Senha" required/>
         </div>
         <div>
-          <input type="password" name="confirmarSenha" id="confirmar-senha" class="login-input" placeholder="Confirmar"/>
+          <input type="password" name="confirmarSenha" id="confirmar-senha" class="login-input" placeholder="Confirmar" required/>
         </div>
         <button id="cadastro-button" class="enviar-button">Cadastre-se</button>
       </form>
