--- a/login.html
+++ b/login.html
@@ -40,6 +40,7 @@
             id="identificador"
             class="login-input"
             placeholder="Identificador"
+            required
           />
         </div>
         <div>
@@ -49,6 +50,7 @@
             id="senha"
             class="login-input"
             placeholder="Senha"
+            required
           />
         </div>
         <button class="enviar-button">Login</button>
