💠👩‍👩‍👦 Checkpoint ./Solicitar.html:58483452/510 ./index.html:58483452/87 ./style.css:58483452/458

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro - Clínica</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap"
-    />
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   </head>
   <body>
     <!--navbar-->
@@ -51,7 +48,7 @@
           ><input type="datetime-local" name="identificador" />
         </section>
         <section>
-          <label>Descrição do motivo da consulta ou sintomas: </label
+          <label>Descrição ou Sintomas:  </label
           ><input type="text" name="identificador" />
         </section>
         <button class="enviar-button">Enviar</button>
