--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
     <title>Clinica medica!</title>
     <link rel="stylesheet" href="/style.css" />
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <script src="/script.js" defer></script>
   </head>
   <body>
