🕵⛩ Checkpoint ./.glitch-assets:58483462/1340 ./Solicitar.html:58483462/385 ./index.html:58483462/1287 ./style.css:58483462/158

--- a/Solicitar.html
+++ b/Solicitar.html
@@ -55,7 +55,7 @@
       </form>
     </div>
     <section class="img-solicitar">
-      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/3255382.jpg?v=1697113694155">
+      <img src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/mulher.png?v=1697156107095">
     </section>
   </body>
 </html>
