--- a/index.html
+++ b/index.html
@@ -29,13 +29,26 @@
       </div>
     </header>
     <!--<div class="content"></div>-->
-
+    
+    <!--IMAGEM INICIAL-->
     <conteiner class="imagem-inicial">
       <img
-        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/banner.png?v=1697132758947"
+        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Novo%20Projeto%20(3).png?v=1697156031336"
       />
     </conteiner>
+    
+    <conteiner class="profissionais">
+      <h1>
+        Nossos profissionais
+      </h1>
+      <div class="profissional">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/usman-yousaf-pTrhfmj2jDA-unsplash.jpg?v=1697156383741"
+        />
+        <h1>Dr.Bruno</h1>
+      </div>
 
+    </conteiner>
     <!--footer-->
     <footer class="footer">
       <div class="container">
