🎒🎫 Checkpoint ./index.html:58483462/838:58517880/10930 ./style.css:58483462/32 ./.glitch-assets:58483462/2725 ./cadastro.html:58517880/46757 ./login.html:58517880/23190

--- a/index.html
+++ b/index.html
@@ -29,25 +29,34 @@
       </div>
     </header>
     <!--<div class="content"></div>-->
-    
+
     <!--IMAGEM INICIAL-->
     <conteiner class="imagem-inicial">
       <img
-        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Novo%20Projeto%20(3).png?v=1697156031336"
+        src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/Novo%20Projeto%20(17).png?v=1697157514615"
       />
     </conteiner>
-    
+
+    <h1>Nossos profissionais</h1>
     <conteiner class="profissionais">
-      <h1>
-        Nossos profissionais
-      </h1>
       <div class="profissional">
         <img
-          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/usman-yousaf-pTrhfmj2jDA-unsplash.jpg?v=1697156383741"
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/M%C3%A9dico1.png?v=1697158027177"
         />
-        <h1>Dr.Bruno</h1>
+        <h2>Dr.Bruno</h2>
       </div>
-
+      <div class="profissional">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/m%C3%A9dica2.png?v=1697158022162"
+        />
+        <h2>Dr.Bruno</h2>
+      </div>
+      <div class="profissional">
+        <img
+          src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medico3.png?v=1697158015966"
+        />
+        <h2>Dr.Bruno</h2>
+      </div>
     </conteiner>
     <!--footer-->
     <footer class="footer">
@@ -94,7 +103,9 @@
               alt="icone youtube"
             />
           </div>
+        </div>
 
+        <div class="container">
           <div class="footer-section">
             <h2>Links Úteis</h2>
             <ul>
@@ -106,6 +117,15 @@
                 />
                 <a href="#">Sobre nós</a>
               </li>
+              <li>
+                <img
+                  class="icone-img"
+                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
+                  alt="seta"
+                />
+                <a href="#">Serviços</a>
+              </li>
+
               <li>
                 <img
                   class="icone-img"
@@ -128,7 +148,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Dashboard</a>
+                <a href="#">Cadastro</a>
               </li>
             </ul>
           </div>
