🐑🌋 Checkpoint ./login.html:58517880/16334 ./style.css:58483452/144:58483462/103 ./index.html:58483462/54

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <img
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/m%C3%A9dica2.png?v=1697158022162"
         />
-        <h2>Dr.Bruno</h2>
+        <h2>Dra.Raquel</h2>
       </div>
       <div class="profissional">
         <img
           src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/medico3.png?v=1697158015966"
         />
-        <h2>Dr.Bruno</h2>
+        <h2>Dr.Jorge</h2>
       </div>
     </conteiner>
     <!--footer-->
