--- a/login.html
+++ b/login.html
@@ -133,6 +133,15 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
+                <a href="#">Serviços</a>
+              </li>
+
+              <li>
+                <img
+                  class="icone-img"
+                  src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
+                  alt="seta"
+                />
                 <a href="#">Especialidades</a>
               </li>
               <li>
@@ -149,7 +158,7 @@
                   src="https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/caret-right.svg?v=1697150841048"
                   alt="seta"
                 />
-                <a href="#">Dashboard</a>
+                <a href="#">Cadastro</a>
               </li>
             </ul>
           </div>
